--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
+    <meta name="description"
+          content="The application allows you to track the mileage of your bike's components. App will inform you about
+           upcoming services, repairs and replacements of parts
+"/>
     <title>My GeaR</title>
 </head>
 <body>
